# VoxelWorld

./: .gitignore  .gitmodules  CMakeLists.txt  Doc.md  Main.qml  README.md  glquickitem.cpp  glquickitem.h  glrenderer.cpp  glrenderer.h  helper.h  main.cpp  vulkanwindow.cpp  vulkanwindow.h
engine/: block.h  chunk.h  chunkgeneration.cpp  constants.h  engine.cpp  engine.h  enginecontext.cpp  enginecontext.h  engineqml.h  objectengine.cpp  objectengine.h  player.cpp  player.h  playercontroller.cpp  playercontroller.h  world.cpp  world.h
glqmlrenderer/: GameWindow.qml  chunkmesh.cpp  chunkmesh.h  glquickitem.cpp  glrenderer.cpp
glrenderer/: GameWindow.qml  chunkmesh.cpp  chunkmesh.h  glquickitem.h  glrenderer.cpp  glrenderer.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/taskflow/: LICENSE
lib/whereami/: whereami.c
qml/: GameWindow.qml  Main.qml
shaders/: shader.frag  shader.vert
src/: main.cpp
src/engine/: block.h  chunkgeneration.cpp  chunkgeneration.h  constants.h  engine.cpp  engine.h  enginecontext.cpp  enginecontext.h  object.h  objectengine.cpp  objectengine.h  playercontroller.cpp  playercontroller.h  playercontrollerinterface.h  settings.h  world.cpp  world.h
src/engine/algorithm/: chunkgeneration.cpp  chunkgeneration.h  chunkmeshing.cpp  chunkmeshing.h  raytraversal.cpp  raytraversal.h
src/engine/data/: blockregistry.cpp  blockregistry.h  chunk.h  chunkmanager.cpp  chunkmanager.h  chunkvertices.h  playerchunkpos.h  world.cpp  world.h
src/engine/playercontroller/: playercontrollerinterface.h  renderplayercontroller.h
src/glfwrenderer/: app.cpp  app.h  blockregistrytbo.cpp  blockregistrytbo.h  chunkmanager.cpp  chunkmanager.h  chunkmesh.cpp  chunkmesh.h  chunkrendermesh.cpp  chunkrendermesh.h  debugui.cpp  debugui.h  frustum.h  renderer.cpp  renderer.h  renderplayercontroller.h  shader.cpp  shader.h  textureatlas.cpp  textureatlas.h  window.cpp  window.h
src/glqmlrenderer/: chunkmesh.cpp  chunkmesh.h  glrenderer.cpp  glrenderer.h
src/mainmenu/: mainmenu.cpp  mainmenu.h
src/shaders/: shader.frag  shader.vert
src/shaders/textures/: atlas.pxo
